buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args "-mixin.config=${mod_id}.mixins.json"

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://modmaven.dev/'
        content {
            includeGroup 'appeng'
            includeGroup 'org.appliedenergistics'
        }
    }
    maven {
        url = 'https://www.cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    implementation fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")

    // Advanced AE is optional at runtime; its accessors/mixins are selected only when loaded.
    compileOnly fg.deobf("curse.maven:advancedae-1084104:${advanced_ae_file_id}")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
    implementation fg.deobf("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")
    jarJar(group: 'io.github.llamalad7', name: 'mixinextras-forge', version: "[${mixinextras_version},)") {
        jarJar.pin(it, "${mixinextras_version}")
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            ae2_version_range: ae2_version_range,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_credits: mod_credits,
            mod_description: mod_description,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'
    manifest {
        attributes([
                'Specification-Title'   : mod_name,
                'Specification-Vendor'  : mod_authors,
                'Specification-Version' : '1',
                'Implementation-Title'  : mod_name,
                'Implementation-Version': project.jar.archiveVersion,
                'Implementation-Vendor' : mod_authors,
                'Implementation-License': mod_license,
                'MixinConfigs'          : "${mod_id}.mixins.json"
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.named('jarJar', Jar).configure {
    archiveClassifier = ''
    finalizedBy 'reobfJarJar'
}

tasks.withType(Jar).configureEach {
    from('LICENSE') {
        into 'META-INF'
        rename { 'LICENSE_thunderbolt.txt' }
    }
    from('README.md') {
        into 'META-INF'
        rename { 'README_thunderbolt.md' }
    }
}

afterEvaluate {
    tasks.findByName('reobfJarJar')?.configure {
        mustRunAfter 'reobfJar'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xmaxerrs', '1000'])
}
